# ellar-cli

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-tests.txt  requirements.txt  sitemap.xml
.github/workflows/: publish.yml  test.yml  test_full.yml
command-grouping/: index.html
create-module-command/: index.html
create-project-command/: index.html
custom-commands/: index.html
docs/: command-grouping.md  create-module-command.md  create-project-command.md  custom-commands.md  index.md  new-command.md  runserver-command.md
ellar_cli/: __init__.py  __main__.py  cli.py  constants.py  file_scaffolding.py  main.py  schema.py  service.py  testing.py  typer.py
ellar_cli/click/: __init__.py  argument.py  command.py  group.py  util.py
ellar_cli/manage_commands/: __init__.py  create_module.py  create_project.py  new.py  runserver.py
ellar_cli/scaffolding/: scaffolding_json_validator.py
ellar_cli/scaffolding/module_template/: setup.json
ellar_cli/scaffolding/module_template/module_name/: controllers.ellar  module.ellar  routers.ellar  schemas.ellar
ellar_cli/scaffolding/new_manage_template/: setup.json
ellar_cli/scaffolding/new_manage_template/folder_name/: README.md  manage.ellar
ellar_cli/scaffolding/new_template/: setup.json
ellar_cli/scaffolding/new_template/folder_name/: README.md
ellar_cli/scaffolding/new_template/folder_name/tests/: conftest.ellar
ellar_cli/scaffolding/project_template/: setup.json
ellar_cli/scaffolding/project_template/project_name/: config.ellar  root_module.ellar  server.ellar
ellar_cli/service/: __init__.py  cli.py  exceptions.py  pyproject.py
new-command/: index.html
runserver-command/: index.html
search/: search_index.json
tests/: conftest.py  test_app_and_ellar_command_group_command.py  test_app_and_ellar_command_group_typers.py  test_build_typers.py  test_ellar_cli_service.py  test_ellar_py_project.py  test_file_scaffolding.py  test_scaffolding_templates_json.py  test_without_context.py
tests/click/: test_app_context_group.py  test_command_args_printing.py
tests/sample_app/: pyproject.toml
tests/sample_app/apps/: bad_app.py  bad_app_2.py  bad_app_3.py  good_app.py
tests/sample_app/example_project/: commands.py  config.py  root_module.py  server.py
tests/sample_app/example_project_2/: commands.py  config.py  root_module.py  server.py
tests/sample_app/example_project_3/: commands.py  config.py  server.py
tests/sample_app/plain_project/: README.md  manage.py
tests/sample_app/plain_project/plain_project/: config.py  root_module.py  server.py
tests/test_cli/: test_ellar_cli_service.py  test_ellar_py_project.py  test_file_scaffolding.py
tests/test_ellar_commands/: test_create_module_command.py  test_create_project_command.py  test_new_command.py  test_runserver_command.py
